social icon responsive

--- a/index.html
+++ b/index.html
@@ -871,25 +871,37 @@
 
       <footer class="py-5">
         <div class="footer-sec">
-          <div
-            class="footer-top d-flex justify-content-between align-items-center"
-          >
-            <div class="whatsapp-left d-flex align-self-center">
-              <img
-                src="img/whatsapp.png"
-                alt=""
-                class="d-flex align-self-center"
-                class="img-fluid"
-              />
-              <div class="whatsapp-dec px-3 pt-2">
-                <h5>Live chat by WhatsApp</h5>
-                <p>Customer Service</p>
+          <div class="footer-top row">
+            <div class="col-lg-9 col-6">
+              <div
+                class="whatsapp-left d-flex align-self-center"
+                style="margin-top: 80px"
+              >
+                <img
+                  src="img/whatsapp.png"
+                  alt=""
+                  class="d-flex align-self-center"
+                  class="img-fluid"
+                />
+                <div class="whatsapp-dec px-3 pt-2">
+                  <h5>Live chat by WhatsApp</h5>
+                  <p>Customer Service</p>
+                </div>
               </div>
             </div>
-            <div class="social-right align-self-center">
-              <img src="img/facebook.png" alt="" class="img-fluid" />
-              <img src="img/twitter.png" alt="" class="img-fluid" />
-              <img src="img/facebook-messenger.png" alt="" class="img-fluid" />
+            <div class="col-lg-3 col-6">
+              <div
+                class="social-right align-self-center"
+                style="margin-top: 250px"
+              >
+                <img src="img/facebook.png" alt="" class="img-fluid" />
+                <img src="img/twitter.png" alt="" class="img-fluid" />
+                <img
+                  src="img/facebook-messenger.png"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
           <div class="footer-bottom p-3">
